# pymusic

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  build_one_dir.py  build_one_file.py  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
src/: playlist.py  pymusic.py  pymusic.spec  song.py
src/download/: download.py
src/play/: play.py
src/util/: constants.py  key_handler.py  selector.py
