[tool.poetry]
name = "pymusic"
version = "0.1.1"
description = "A cli to download and play music."
authors = ["Nvt5"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]
exclude = ["playlists", "songs"]

[tool.poetry.dependencies]
python = "3.13"
click = "8.1.7"
pytubefix = "8.13.1"
moviepy = "2.1.1"
keyboard = "0.13.5"
pygame = "2.6.1"
PyWinCtl = "0.4.1"

[tool.poetry.group.dev.dependencies]
PyInstaller = "6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pymusic = "src.pymusic:cli"