[tool.poetry]
name = "pymusic"
version = "0.2.2"
description = "A cli to download and play music."
authors = ["Nvt5"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]
exclude = ["playlists", "songs"]

[tool.poetry.dependencies]
python = "3.13"
click = "8.2.1"
yt-dlp = "2025.9.5"
moviepy = "2.2.1"
keyboard = "0.13.5"
pygame-ce = "2.5.5"
PyWinCtl = "0.4.1"
poetry-core = "^2.1.3"

[tool.poetry.group.dev.dependencies]
PyInstaller = "6.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pymusic = "src.pymusic:cli"